Bug delete tariff (#1200)
* Added bagstatus

* Fixed everything

* Added new tests

* fixed tests

* fixed tests in SuperAdminServiceImplTest

* fixed tests in UBSManagementServiceImplTest

* added tests to cover+ refactored code to add element to mutable list